--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,12 @@
   .nav-container nav {
     padding-right:500px;
   }
+
+
+  header .header-container h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 46px;
+    color: #1F2431;
+  }
