--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,13 @@
     line-height: 46px;
     color: #1F2431;
   }
+
+
+  header .header-container p {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 26px;
+    color:#82899B;
+    width: 251px;
+  }
