--- a/styles.css
+++ b/styles.css
@@ -75,3 +75,14 @@
   header .header-container button:hover{
     background-color: #3553be;
   }
+
+
+  main article p {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 29px;
+    color: #82899B;
+    padding: 35px;
+    padding-right: 120px;
+  }
