--- a/styles.css
+++ b/styles.css
@@ -124,3 +124,11 @@
  .sixth-article h3 {
    padding-bottom: 0px;
  }
+
+
+ footer div h5 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 20px;
+  }
