--- a/styles.css
+++ b/styles.css
@@ -132,3 +132,12 @@
     font-weight: bold;
     line-height: 20px;
   }
+
+  footer a {
+    display: flex;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    line-height: 25px;
+    color: #82899B;
+  }
