stylized footers' paragraph

--- a/styles.css
+++ b/styles.css
@@ -141,3 +141,10 @@
     line-height: 25px;
     color: #82899B;
   }
+
+  footer p {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    line-height: 25px;
+    color: #82899B;
+  }  
