--- a/styles.css
+++ b/styles.css
@@ -170,3 +170,10 @@
     width: 218px;
     height: 39px;
 }
+
+footer div input::placeholder {
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    color: #82899B;
+    padding-left: 5px;
+  }
