--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@
 
   main {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding-top: 30px;
     padding-bottom: 30px;
   }
@@ -90,7 +90,6 @@
     line-height: 29px;
     color: #82899B;
     padding: 35px;
-    padding-right: 120px;
   }
 
   main h3 {
@@ -115,6 +114,7 @@
   strong {
     color: black;
     font-weight: 500;
+    padding-left: 1.5px;
   }
 
   .sixth-article p {
@@ -207,3 +207,102 @@ footer div input::placeholder {
         padding-top: 50px;
       }
         
+ @media screen and (max-width: 1230px) {
+    main section article {
+      width: 480px;
+    }
+ }
+
+ @media screen and (max-width: 1210px) {
+   .nav-container nav {
+     padding-right: 0px;
+   }
+ }    
+
+@media screen and (max-width: 1080px) {
+  main {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+   article img {
+     margin-left: 0px;
+   }
+}
+
+ @media screen and (max-width: 1000px) {
+   .nav-container {
+     display: flex;
+     align-items: center;
+     flex-direction: column;
+     justify-content: center;
+   }
+
+   .nav-container img {
+     margin: 15px;
+   }
+
+  header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .header-container {
+      display: block;
+      width: 559px;
+      padding-bottom: 50px;
+      text-align: center;
+    }
+     .header-container h1 {
+       margin-top: 0px;
+     }
+     
+    .header-container p {
+      margin-left: 150px;
+    }
+
+     footer {
+       flex-direction: column;
+       text-align: center;
+       align-items: center;
+     }
+ 
+     footer h5 {
+       margin: 10px;
+     }
+
+     footer small {
+       padding-left: 40px;
+     }
+    
+ }
+
+ @media screen and (max-width:600px) {
+    header img {
+      width: 300px;
+    }
+
+    main section article{
+      width: 400px;
+    }
+  
+    .header-container {
+      width: 400px;
+    }
+    .header-container p {
+     margin-left: 0px;
+     margin-left: 70px;
+    }
+
+    article img {
+      width: 300px;
+    }
+    
+    footer {
+      padding: 0px;
+    }
+ }
