--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,12 @@
 }
 
 
+
+.roadmap .block {
+  width: 120px;
+  display: inline-block;
+}
+
  footer{
     display: flex;
     justify-content: space-between;
