--- a/styles.css
+++ b/styles.css
@@ -157,8 +157,10 @@
 }
 
 .roadmap .block {
-  width: 130px;
+  width: 160px;
+  height: 120px;
   display: inline-block;
+  text-align:left;
 }
 
  footer{
