--- a/styles.css
+++ b/styles.css
@@ -1,129 +1,125 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap");
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .main-container {
-    padding: 30px;
+  padding: 30px;
 }
 
 .nav-container {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav-container nav a {
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 400;
-    font-family: 'Montserrat', sans-serif;
-    color: #1F2431;
-    padding: 15px;
- }
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+  color: #1f2431;
+  padding: 15px;
+}
 
- .nav-container nav a:hover {
-    text-decoration: underline;
-  }
+.nav-container nav a:hover {
+  text-decoration: underline;
+}
 
-  .nav-container nav {
-    padding-right:500px;
-  }
+.nav-container nav {
+  padding-right: 500px;
+}
 
+header {
+  display: flex;
+  align-items: center;
+  padding: 40px;
+}
 
-  header {
-    display: flex;
-    align-items: center;
-    padding: 40px;
-  }
+header .header-container h1 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 46px;
+  color: #1f2431;
+}
 
-  header .header-container h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 46px;
-    color: #1F2431;
-  }
+header .header-container p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 26px;
+  color: #82899b;
+  width: 251px;
+}
 
+header .header-container button {
+  border-radius: 51px;
+  border-color: #315efb;
+  background-color: #315efb;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  cursor: pointer;
+  width: 215px;
+  height: 40px;
+}
 
-  header .header-container p {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 26px;
-    color:#82899B;
-    width: 251px;
-  }
+header .header-container button:hover {
+  background-color: #3553be;
+}
 
+main {
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 
-  header .header-container button {
-    border-radius: 51px;
-    border-color: #315EFB;
-    background-color: #315EFB;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    font-size: 12px;
-    text-align: center;
-    color: #FFFFFF;
-    text-transform: uppercase;
-    cursor: pointer;
-    width: 215px;
-    height: 40px;
-  }
+main article p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 29px;
+  color: #82899b;
+  padding: 35px;
+}
 
-  header .header-container button:hover{
-    background-color: #3553be;
-  }
+main h3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 29px;
+  padding: 35px;
+}
 
-  main {
-    display: flex;
-    justify-content: space-evenly;
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
+main img {
+  margin-left: 50px;
+  padding-bottom: 10px;
+}
 
-  main article p {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 29px;
-    color: #82899B;
-    padding: 35px;
-  }
+main article {
+  background-color: #fafcff;
+  border-radius: 6px;
+  width: 565px;
+}
 
-  main h3 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 29px;
-    padding: 35px;
-  }
+strong {
+  color: black;
+  font-weight: 500;
+  padding-left: 1.5px;
+}
 
-  main img{
-    margin-left: 50px;
-    padding-bottom: 10px;
-  }
+.sixth-article p {
+  padding-top: 0px;
+}
 
-  main article {
-    background-color: #FAFCFF;
-    border-radius: 6px;
-    width: 565px;
-  }
-
-  strong {
-    color: black;
-    font-weight: 500;
-    padding-left: 1.5px;
-  }
-
-  .sixth-article p {
-    padding-top: 0px;
- }
- 
- .sixth-article h3 {
-   padding-bottom: 0px;
- }
+.sixth-article h3 {
+  padding-bottom: 0px;
+}
 
 .roadmap {
   display: flex;
@@ -133,19 +129,19 @@
 }
 
 .roadmap span {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 10px;
   font-weight: 300;
   line-height: 18px;
-  color: #1F2431;
+  color: #1f2431;
 }
 
 .roadmap p {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
   font-weight: 300;
   line-height: 18px;
-  color: #82899B;
+  color: #82899b;
   padding: 0px;
   width: 100px;
 }
@@ -158,7 +154,7 @@
   width: 150px;
   height: 120px;
   display: inline-block;
-  text-align:left;
+  text-align: left;
 }
 
 .roadmap .line {
@@ -173,98 +169,98 @@
   padding-top: 7px;
 }
 
- footer{
-    display: flex;
-    justify-content: space-between;
-    padding: 40px;
-  }
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 40px;
+}
 
- footer div h5 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    line-height: 20px;
-  }
+footer div h5 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 20px;
+}
 
-  footer a {
-    display: flex;
-    text-decoration: none;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    line-height: 25px;
-    color: #82899B;
-  }
+footer a {
+  display: flex;
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  line-height: 25px;
+  color: #82899b;
+}
 
-  footer a:hover {
-    text-decoration: underline;
-  }
+footer a:hover {
+  text-decoration: underline;
+}
 
-  footer p {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    line-height: 25px;
-    color: #82899B;
-  }  
+footer p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  line-height: 25px;
+  color: #82899b;
+}
 
-  footer img {
-    padding-top: 25px;
-  }
+footer img {
+  padding-top: 25px;
+}
 
-  footer div input {
-    border: 1px solid #82899B;
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
-    width: 218px;
-    height: 39px;
+footer div input {
+  border: 1px solid #82899b;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  width: 218px;
+  height: 39px;
 }
 
 footer div input::placeholder {
-    font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
-    color: #82899B;
-    padding-left: 5px;
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  color: #82899b;
+  padding-left: 5px;
+}
+
+footer div button {
+  background: #315efb;
+  border: 1px solid #315efb;
+  color: white;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  width: 106px;
+  height: 39.5px;
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  cursor: pointer;
+}
+
+footer div button:hover {
+  background-color: #3553be;
+}
+
+footer div form {
+  display: inline-table;
+}
+
+footer div small {
+  display: flex;
+  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  color: #82899b;
+  padding-top: 50px;
+}
+
+@media screen and (max-width: 1230px) {
+  main section article {
+    width: 480px;
   }
+}
 
-  footer div button {
-    background: #315EFB;
-    border: 1px solid #315EFB;
-    color: white;
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
-    width: 106px;
-    height: 39.5px;
-    font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
-    cursor: pointer;
-    }
-
-    footer div button:hover {
-        background-color: #3553be;
-      }
-
-      footer div form {
-        display: inline-table;
-      }   
-
-      footer div small {
-        display: flex;
-        font-size: 12px;
-        font-family: 'Montserrat', sans-serif;
-        color: #82899B;
-        padding-top: 50px;
-      }
-        
- @media screen and (max-width: 1230px) {
-    main section article {
-      width: 480px;
-    }
- }
-
- @media screen and (max-width: 1210px) {
-   .nav-container nav {
-     padding-right: 0px;
-   }
- }    
+@media screen and (max-width: 1210px) {
+  .nav-container nav {
+    padding-right: 0px;
+  }
+}
 
 @media screen and (max-width: 1080px) {
   main {
@@ -274,108 +270,110 @@ footer div input::placeholder {
     padding-top: 0px;
     padding-bottom: 0px;
   }
-   article img {
-     margin-left: 0px;
-   }
+  article img {
+    margin-left: 0px;
+  }
 }
 
- @media screen and (max-width: 1000px) {
-   .nav-container {
-     display: flex;
-     align-items: center;
-     flex-direction: column;
-     justify-content: center;
-   }
+@media screen and (max-width: 1000px) {
+  .nav-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
 
-   .nav-container img {
-     margin: 15px;
-   }
+  .nav-container img {
+    margin: 15px;
+  }
 
   header {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
-    .header-container {
-      display: block;
-      width: 559px;
-      padding-bottom: 50px;
-      text-align: center;
-    }
-     .header-container h1 {
-       margin-top: 0px;
-     }
-     
-    .header-container p {
-      margin-left: 150px;
-    }
+  .header-container {
+    display: block;
+    width: 559px;
+    padding-bottom: 50px;
+    text-align: center;
+  }
+  .header-container h1 {
+    margin-top: 0px;
+  }
 
-     footer {
-       flex-direction: column;
-       text-align: center;
-       align-items: center;
-     }
- 
-     footer h5 {
-       margin: 10px;
-     }
+  .header-container p {
+    margin-left: 150px;
+  }
 
-     footer small {
-       padding-left: 40px;
-     }
-    
- }
+  footer {
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
 
- @media screen and (max-width:600px) {
-    header img {
-      width: 300px;
-    }
+  footer h5 {
+    margin: 10px;
+  }
 
-    main section article{
-      width: 400px;
-    }
-  
-    .header-container {
-      width: 400px;
-    }
-    .header-container p {
-     margin-left: 0px;
-     margin-left: 70px;
-    }
+  footer small {
+    padding-left: 40px;
+  }
+}
 
-    article img {
-      width: 300px;
-    }
-    
-    footer {
-      padding: 0px;
-    }
+@media screen and (max-width: 600px) {
+  header img {
+    width: 300px;
+  }
 
-    .roadmap {
-      width: 350px;
-      text-align: left;
-      padding-left: 10px;
-      margin-right: 0px;
-    }
-    .roadmap img {
-      width: 20px;
-    }
+  main section article {
+    width: 400px;
+  }
 
-    .roadmap .line {
-      width: 90px ;
-    }
+  .header-container {
+    width: 400px;
+  }
+  .header-container p {
+    margin-left: 0px;
+    margin-left: 70px;
+  }
 
-    .first-map {
-      width: 120px;
-    }
+  article img {
+    width: 300px;
+  }
 
-    .second-map {
-      width: 120px;
-    }
+  footer {
+    padding: 0px;
+  }
 
-    .third-map {
-      width: 120px;
-    }
- }
+  .roadmap {
+    width: 350px;
+    text-align: left;
+    padding-left: 30px;
+    margin-right: 0px;
+  }
+  .roadmap img {
+    width: 20px;
+  }
+
+  .roadmap .line {
+    width: 90px;
+  }
+
+  .first-map {
+    width: 120px;
+  }
+
+  .second-map {
+    width: 120px;
+  }
+
+  .third-map {
+    width: 120px;
+  }
+  .three-circle img {
+    width: 6px;
+  }
+}
