--- a/styles.css
+++ b/styles.css
@@ -169,6 +169,11 @@ strong {
   padding-top: 7px;
 }
 
+.first-map .first-block p {
+   margin: 0px;
+}
+
+
 footer {
   display: flex;
   justify-content: space-between;
