--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ main {
   padding-bottom: 30px;
 }
 
-main article p {
+main .article p {
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
   font-weight: 300;
@@ -101,7 +101,7 @@ main img {
   padding-bottom: 10px;
 }
 
-main article {
+main .article {
   background-color: #fafcff;
   border-radius: 6px;
   width: 565px;
